--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:24.04
 
-RUN apt-get update && apt-get install -y build-essential cmake \
+RUN apt-get update && apt-get install -y build-essential cmake libgoogle-perftools-dev\
 	pkg-config libcurl4-openssl-dev ca-certificates \
 && rm -rf /var/lib/apt/lists/*
